# loona

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.config.toml
locales/: en-US.ftl  ru.ftl
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_starboard_settings.rs  m20260715_060336_create_starboard_posts.rs
src/: config.rs  main.rs  translation.rs
src/commands/: starboard.rs
src/entities/: mod.rs  prelude.rs  starboard_posts.rs  starboard_settings.rs
src/handlers/: starboard.rs
src/utils/: starboard.rs
