[package]
name = "loona"
version = "0.1.0"
edition = "2024"
publish = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.103"
fluent-bundle = "0.16.0"
fluent-templates = "0.14.0"
migration = { path = "migration" }
poise = "0.6.2"
sea-orm = { version = "2.0.0-rc", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "fs"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[workspace]
resolver = "3"
members = [".", "migration"]
