[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
version = "2.0.0-rc"
